Another correction to scrolling behaviour.  The thing that scrolls need to have position absolute so that it scrolls on top of everything else (i.e., scrollbar on top, scrolls under top banner).

--- a/code/sass/TransactionTable.scss
+++ b/code/sass/TransactionTable.scss
@@ -633,10 +633,6 @@ body > ._import_status_popup {
   position:   absolute;
   width:      100%;
   clear:      both;
-  > ._AccountBalanceView {
-    &::-webkit-scrollbar { width: 0 !important };
-    overflow-y: scroll;
-  }
   > ._import {
     clear: both;
     margin-left: 10px;
