--- a/code/sass/lib.scss
+++ b/code/sass/lib.scss
@@ -176,6 +176,7 @@ table > tbody > tr > td > ._field > div > ._content {
 ._sidebar_right {
   overflow-x: visible;
   overflow-y: scroll;
+  &::-webkit-scrollbar { width: 0 !important };
   right: 0px;
   z-index: 1;
   height: calc(100% - #{$tab-bar-height});
